--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Order Summary
+  <main>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <header>
+      <img src="images/illustration-hero.svg" alt="">
+    </header>
 
-  Annual Plan
-  $59.99/year
+    <section class="conteudo-escrito">
 
-  Change
+      <h2>Order Summary</h2>
+        <p>
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+       </p>
+       
+        <div class="plano-container">
+            <img src="images/icon-music.svg" alt="">
 
-  Proceed to Payment
-  Cancel Order
+            <span class="p1">
+              Annual Plan<br> <span class="preco">$59.99/year</span>
+            </span>
+            <a href="#">Change</a>
+        </div>
+        <div class="links">
+          <a href="" class="link-1">Proceed to Payment</a>
+          <a href="" class="link-2">Cancel Order</a>
+        </div>
+      </section>
+
+
+    
+  </main> 
+
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Alex Almeida</a>.
+  </footer>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
