--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Alex Almeida</a>.
+    Coded by <a href="https://github.com/AlexAlmeidaBo" target="_blank">Alex Almeida</a>.
   </footer>
   
 </body>
